--- a/assets/css/style-12.css
+++ b/assets/css/style-12.css
@@ -154,7 +154,7 @@ h3{font-size: 1.25em;font-weight: normal}
 .support img{height: 100%;max-height: 25px;margin:0 .25em}
 .copyright{font-size: 15px;padding-top: 1em;margin-top: 1em;border-top: solid 1px #f5e2cd}
 
-#links+#half{margin-top:-0.5em}
+#links+#half{margin-top:-0.5em;margin-bottom:2em}
 #half{display: flex}
 #half .link{width: 50%;margin-right: 15px}
 #half .link:last-child{border-radius: 0 20px 0 0;margin-right: 0}
