--- a/assets/css/style-12.css
+++ b/assets/css/style-12.css
@@ -19,7 +19,7 @@ body {
       margin: 0;
       font-family: 'Lydian', sans-serif;
       color:#f5e2cd;
-      background-color: #ce300b;
+      background-color: #c34327;
       background-image: url('../images/12_bg.jpg');
       background-position: bottom;
       background-attachment: fixed;
